# ProgramavimoPraktika

./: CMakeLists.txt  Istorija  battle.cpp  main.cpp  menu.cpp  menu.h  monster.cpp  monster.h  monster_data.h  player.cpp  player.h  shop.h
Battle/: battle.cpp  battle.h
Inventory/: inventory.cpp  inventory.h
Monsters/: monster.cpp  monster.h  monster_data.cpp  monster_data.h
Player/: player.cpp  player.h
Shop/: shop.cpp  shop.h
